...
                            HStack {
                                Text(task)
                            }
                        }
                }
                HStack {
                    TextField("new task", text: $textFieldtext)
                        .frame(maxWidth: .infinity)
                        .frame(height: 50)
                        .padding()
                        .background(.gray.opacity(0.7))
                        .cornerRadius(25)
                    Button {
...
                            alertMessage.toggle()
                        } else {
                            viewModel.addItems(task: textFieldtext)
                            textFieldtext = ""
                        }
                    } label: {
                        Text("Add Task")
                            .foregroundStyle(.white)
                            .padding()
                            .background(.black)
                            .cornerRadius(25)
                    }.alert(isPresented: $alertMessage) {
                        return Alert(title: Text("This Field can not be empty!!"))
...
